tests/idris2/error/error023/Error1.idr
%inline %noinline
foo : Int -> Int
foo x = x
